--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+  <head>
+    <link rel="icon" href="">
+<title>German Subject</title>
 <body>
 
 <h1>This is a heading</h1>
