--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="">
+    <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
 <title>German Subject</title>
 <body>
 
