--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" width="400" height="200" alt="German Flag">
 <title>German Subject</title>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+
 
 </body>
 </html>
