--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html>
   <head>
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" width="707" height="190" alt="German Flag">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" width="707" align="middle" height="190" alt="German Flag">
 <title>German Subject</title>
 <body>
+<style>
+  
+  .blink_text {
+    animation:1s blinker linear infinite;
+    -webkit-animation:1s blinker linear infinite;
+    -moz-animation:1s blinker linear infinite;
+     color: black;
+     font-family: monospace;
+     text-align:center;
+     font-size:68px;
+text-
+    }
+    @-moz-keyframes blinker {  
+     0% { opacity: 1.0; }
+     50% { opacity: 0.0; }
+     100% { opacity: 1.0; }
+     }
+    @-webkit-keyframes blinker {  
+     0% { opacity: 1.0; }
+     50% { opacity: 0.0; }
+     100% { opacity: 1.0; }
+     }
+    @keyframes blinker {  
+     0% { opacity: 1.0; }
+     50% { opacity: 0.0; }
+     100% { opacity: 1.0; }
+     }
+    }
+  
+  
+</style>
 
-
-
+<h1 class="blink_text">The Subject of German</h1>
+  
 </body>
 </html>
