--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
   <head>
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" width="707" align="middle" height="190" alt="German Flag">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" style="width:50%;" width="707" height="190" alt="German Flag">
 <title>German Subject</title>
 <body>
 <style>
+  
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   }
   
   .blink_text {
     animation:1s blinker linear infinite;
