--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" style="width:50%;" width="707" height="190" alt="German Flag">
 <title>German Subject</title>
+    <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
+
 <body>
+  .topnav {
+    overflow: hidden;
+    background-color:#C95E5E;
+    
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+}
 <style>
   
   body {
