--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   .topnav a:hover {
     background-color: #ddd;
     color: black;
+    
+ <div class="topnav">
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+  <a href="#">Link</a>
+</div>
 }
 }
 <style>
