--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ li.dropdown {
 
 <ul>
   <li><a href="http://www.stjosephsrush.ie/">Home</a></li>
-  <li><a href="https://docs.google.com/presentation/d/16qbtcmEidyz1Cre8CqC3qlRH34JI4VJy2aUOmyAtu20/pub?start=false&loop=false&delayms=3000&slide=id.g2c781f362e_0_3">Notice Board</a></li>
+  <li><a href="">Notice Board</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Parents</a>
     <div class="dropdown-content">
