--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #424242;
 }
 
 li {
@@ -23,7 +23,7 @@ li a {
 }
 
 li a:hover {
-    background-color: #111;
+    background-color: #D9CB8C;
 }
 </style>
 </head>
