--- a/index.html
+++ b/index.html
@@ -1,47 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #424242;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #C95E5E;
-}
-</style>
-</head>
-<body>
-
-<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">Notice Board</a></li>
-  <li><a href="#contact">Subjects</a></li>
-  <li><a href="#about">Contact</a></li>
-</ul>
-
-</body>
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
+    <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" style="width:50%;" width="707" height="190" alt="German Flag">
-<title>German Subject</title>
+    <div class="blink_text">German</div>  
+    </div>
+      
+      <title>German Subject</title>
 <body>
 <style>
+  
+  .container {
+    position: relative;
+    text-align: center;
+}
   
   img {
     display: block;
@@ -57,6 +30,11 @@ li a:hover {
      font-family: monospace;
      text-align:center;
      font-size:40px;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+}
 text-
     }
     @-moz-keyframes blinker {  
@@ -79,7 +57,7 @@ text-
   
 </style>
 
-<h1 class="blink_text">The Subject of German</h1>
+
   
 </body>
 </html>
