--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
       
       <title>German Subject</title>
 <body>
-<style>
+  <p class="speech">DEUTCHLAND</p>
 
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+p.speech {
+  position: relative;
+  top: 30px;
+  left: 70px;
+  width: 200px;
+  height: 100px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 100px;
+  background-color: #fff;
+  border: 8px solid #000000;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  -webkit-box-shadow: 2px 2px 4px #888;
+  -moz-box-shadow: 2px 2px 4px #888;
+  box-shadow: 2px 2px 4px #888;
 }
 
-li {
-    float: left;
-}
- 
-  .container {
-    position: relative;
-    text-align: center;
-}
   
   img {
     display: block;
