--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <title>German Subject</title>
 <body>
   <p class="speech">DEUTCHLAND</p>
-
+<style>
 p.speech {
   position: relative;
   width: 200px;
