--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <div class="blink_text">German</div>  
     </div>
       
-      <title>German Subject</title>
-<body>
+  <title>German Subject</title>
+    
+  </head>
   
- 
-  
+<body> 
+
 <style>
 
   
