--- a/index.html
+++ b/index.html
@@ -53,20 +53,22 @@ li.dropdown {
     display: block;
 }
 </style>
-</head>
-<body>
-
-<ul>
+    <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
   <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <a href="javascript:void(0)" class="dropbtn">Subjects</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Compulsary</a>
+      <a href="#">Choice</a>
+      <a href="#">Languages</a>
     </div>
   </li>
+      
+</head>
+<body>
+
+
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
     
     <div class="container">
