--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ li.dropdown {
       
 </head>
 <body>
-
+  <head>
 
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
     
