--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #424242;
     text-align: center;
     font-size: 40px;
 }
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #C95E5E;
 }
 
 li.dropdown {
