--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="#news"></a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Ein</a>
+      <a href="#">Zwei</a>
+      <a href="#">Drei</a>
     </div>
   </li>
 </ul>
@@ -34,9 +34,9 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #424242;
+    background-color: #333;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
 }
 
 li {
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #C95E5E;
+    background-color: red;
 }
 
 li.dropdown {
@@ -101,7 +101,7 @@ li.dropdown {
      color: black;
      font-family: monospace;
      text-align:center;
-     font-size:40px;
+     font-size:50px;
      position: absolute;
      top: 50%;
      left: 50%;
