--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news"></a></li>
+  <li><a href="#news">News</a></li>
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
-      <a href="#">Ein</a>
-      <a href="#">Zwei</a>
-      <a href="#">Drei</a>
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
     </div>
   </li>
 </ul>
@@ -34,9 +34,9 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #424242;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 li {
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #C95E5E;
 }
 
 li.dropdown {
@@ -62,7 +62,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #D9CB8C;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -101,7 +101,7 @@ li.dropdown {
      color: black;
      font-family: monospace;
      text-align:center;
-     font-size:50px;
+     font-size:40px;
      position: absolute;
      top: 50%;
      left: 50%;
