--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: white;
+    background-color: #C95E5E;
 }
 
 li.dropdown {
@@ -62,7 +62,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #D9CB8C;
+    background-color: white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
