--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     overflow: hidden;
     background-color: #424242;
     text-align: center;
-    font-size: 40px;
+    font-size: 250px;
 }
 
 li {
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #C95E5E;
+    background-color: white;
 }
 
 li.dropdown {
@@ -62,7 +62,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: #D9CB8C;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -101,7 +101,7 @@ li.dropdown {
      color: black;
      font-family: monospace;
      text-align:center;
-     font-size:40px;
+     font-size:60px;
      position: absolute;
      top: 50%;
      left: 50%;
