--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     overflow: hidden;
     background-color: #424242;
     text-align: center;
-    font-size: 25px;
+    font-size: 250px;
 }
 
 li {
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: white;
+    background-color: #C95E5E;
 }
 
 li.dropdown {
