--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #C95E5E;
+    background-color: #E1DEAD;
 }
 
 li.dropdown {
