--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
       <a href="#">Eins</a>
-      <a href="#">Link 2</a>
+      <a href="#">Zwei</a>
       <a href="#">Link 3</a>
     </div>
   </li>
