--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="dropdown-content">
       <a href="#">Eins</a>
       <a href="#">Zwei</a>
-      <a href="#">Link 3</a>
+      <a href="#">Drei</a>
     </div>
   </li>
 </ul>
@@ -52,7 +52,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #E1DEAD;
+    background-color: #C95E5E;
 }
 
 li.dropdown {
@@ -76,7 +76,7 @@ li.dropdown {
     text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #D9CB8C}
+.dropdown-content a:hover {background-color: #E1DEAD}
 
 .dropdown:hover .dropdown-content {
     display: block;
