--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
-      <a href="#">Eins</a>
-      <a href="#">Zwei</a>
-      <a href="#">Drei</a>
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
     </div>
   </li>
 </ul>
@@ -36,7 +36,7 @@
     overflow: hidden;
     background-color: #424242;
     text-align: center;
-    font-size: 250px;
+    font-size: 25px;
 }
 
 li {
@@ -62,7 +62,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: #D9CB8C;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -76,7 +76,7 @@ li.dropdown {
     text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #E1DEAD}
+.dropdown-content a:hover {background-color: #D9CB8C}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -126,10 +126,15 @@ text-
      }
     }
   
+  h1 {
+    background-color: #000000;
+    font-size: 40px;
+    
+}
   
 </style>
 
-
+  <h1>German Info</h1>
   
 </body>
 </html>
