--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #D9CB8C;
+    background-color: white;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -76,7 +76,7 @@ li.dropdown {
     text-align: left;
 }
 
-.dropdown-content a:hover {background-color: #D9CB8C}
+.dropdown-content a:hover {background-color: #F5F599}
 
 .dropdown:hover .dropdown-content {
     display: block;
