--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     background-color: #424242;
     text-align: center;
     font-size: 25px;
+    font-style: monospace;
 }
 
 li {
@@ -106,6 +107,7 @@ li.dropdown {
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
+     font-style: monospace;
 }
 text-
     }
@@ -129,6 +131,7 @@ text-
   h1 {
     background-color: #000000;
     font-size: 40px;
+    font-style: monospace;
     
 }
   
