--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 
 <style>
   
-  background-image: url('https://media1.tenor.com/images/cbce243188cf8f6083cd588db489dc84/tenor.gif?itemid=5643710');
+body {
+    background-image:url('https://media1.tenor.com/images/cbce243188cf8f6083cd588db489dc84/tenor.gif?itemid=5643710');
+    background-size:100%;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    height:100%;
+    width:100%;
+}
   
   ul {
     list-style-type: none;
