--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
+      <a href="#">Link </a>
       <a href="#">Link 2</a>
       <a href="#">Link 3</a>
     </div>
@@ -155,18 +155,13 @@ text-
     padding: 15px;
 }
 
-/* Clear floats after the columns */
+
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width:600px) {
-    .column {
-        width: 100%;
-    }
 }
 </style>
 </head>
