--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ text-
    .column {
     float: left;
     width: 33.33%;
-    padding: 15px;
+    padding: 10px;
     font-family: monospace;
     font-size: 30px;
 }
@@ -168,17 +168,17 @@ text-
 <div class="row">
   <div class="column">
     <h2>About the subject</h2>
-    <p></p>
+    <p>lots of stuff</p>
   </div>
   
   <div class="column">
     <h2>The Course</h2>
-    <p></p>
+    <p>stuff/p>
   </div>
   
   <div class="column">
     <h2>Teachers</h2>
-    <p></p>
+    <p>stuff</p>
   </div>
 </div>
   
