--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ text-
    .column {
     float: left;
     width: 33.33%;
-    padding: 10px;
+    padding: 5px;
     font-family: monospace;
     font-size: 30px;
 }
@@ -173,7 +173,7 @@ text-
   
   <div class="column">
     <h2>The Course</h2>
-    <p>stuff/p>
+    <p>stuff</p>
   </div>
   
   <div class="column">
