--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
     <div class="dropdown-content">
-      <a href="#">Link </a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">stuff</a>
+      <a href="#">stuff</a>
+      <a href="#">stuff</a>
     </div>
   </li>
 </ul>
@@ -29,8 +29,6 @@
 
 <style>
   
-
-  
   ul {
     list-style-type: none;
     margin: 0;
@@ -43,7 +41,7 @@
 }
 
 li {
-    float: left;
+    float: center;
 }
 
 li a, .dropbtn {
@@ -137,33 +135,28 @@ text-
     text-align: center;
     
 }
-   .column {
-    float: left;
-    width: 33.33%;
-    padding: 15px;
-    font-family: monospace;
-    font-size: 30px;
-}
-
-
+ 
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 15px;
+    font-size: 35;
+}
 
   .gif {
     left: 30px;
     bottom: 30px;
+  }
   
 </style>
 
-  <h1>German Information</h1>
-
 </head>
 <body>
-  
- 
   
 <div class="row">
   <div class="column">
@@ -176,12 +169,7 @@ text-
     <p>stuff</p>
   </div>
   
-  <div class="column">
-    <h2>Teachers</h2>
-    <p>stuff</p>
-  </div>
-</div>
-  
+
    <div class="gif">
  <img src="https://media1.tenor.com/images/cbce243188cf8f6083cd588db489dc84/tenor.gif?itemid=5643710" width="350" height="350">
   </div>
