--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #C95E5E;
+    background-color: ffff00;
 }
 
 li.dropdown {
