--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    Welcome to St Josephs Secondary Schools Website
+    <img src="https://cdn2.iconfinder.com/data/icons/money-shoping/96/map_marker_mark_destination-512.png" width="15" height="15" alt="Address"> Address: .
+    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/42970-200.png" width="10" height="10" alt="Telephone Number"> Tel: 01-8437534
+    
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
