--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    Welcome to St Josephs Secondary Schools Website
+    Welcome to St Josephs Secondary Schools German Website
     <img src="https://cdn2.iconfinder.com/data/icons/money-shoping/96/map_marker_mark_destination-512.png" width="15" height="15" alt="Address"> Address: .
-    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/42970-200.png" width="10" height="10" alt="Telephone Number"> Tel: 01-8437534
-    
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li class="dropdown">
-    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
-    <div class="dropdown-content">
-      <a href="#">stuff</a>
-      <a href="#">stuff</a>
-      <a href="#">stuff</a>
-    </div>
-  </li>
-</ul>
+    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/42970-200.png" width="15" height="15" alt="Telephone Number"> Tel: 01-8437534
+    <meta charset="utf-8"> 
+
 
     <link rel="icon" href="https://image.flaticon.com/icons/svg/197/197571.svg">
     
@@ -30,6 +19,20 @@
   </head>
   
 <body> 
+  
+  <ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li class="dropdown">
+    <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+    <div class="dropdown-content">
+      <a href="#">stuff</a>
+      <a href="#">stuff</a>
+      <a href="#">stuff</a>
+    </div>
+  </li>
+</ul>
+
 
   <div class="row">
   <div class="column side">
@@ -38,19 +41,32 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p></p>
+    <p>bla bla</p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
-    <p></p>
+    <p>this that and the other</p>
   </div>
 </div>
   
 <style>
   
+    body { 
+  background-color: blue;
+  }
+  
+  head {
+  background-color: white;
+  }
+  
+  body {
+  margin: 0;
+}
+  
   .column {
     float: left;
     padding: 10px;
+    font-family: monospace;
 }
 
 
