--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
 <style>
   
     body { 
-  background-color: blue;
+  background-color: rgb(77, 148, 255);
   }
   
-  head {
-  background-color: white;
-  }
+html {
+  background: transparent;
   
   body {
   margin: 0;
