--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     Welcome to St Josephs Secondary Schools German Website<br>
-    <img src="https://cdn2.iconfinder.com/data/icons/money-shoping/96/map_marker_mark_destination-512.png" width="15" height="15" alt="Address"> Address: .
-    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/42970-200.png" width="15" height="15" alt="Telephone Number"> Tel: 01-8437534
+    <img src="https://cdn2.iconfinder.com/data/icons/money-shoping/96/map_marker_mark_destination-512.png" width="15" height="15" alt="Address">Address:rush, rush, rush.
+    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/42970-200.png" width="15" height="15" alt="Telephone Number">Tel: 01-8437534
     
 
 
