--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
  <div id="nav">
     <ul>
         <li>
-          <a href="https://stjrush.github.io/DBoyz/Model3.html">Home</a>
+          <a href="https://stjrush.github.io/sitegerman.github.io/">Home</a>
         </li>
-        <li><a href="https://toddmilne13.github.io/images.html/images.html">School</a>
+        <li><a href="">School</a>
         </li>
-        <li><a href="https://toddmilne13.github.io/updates.html/updates.html">School</a>
+        <li><a href="">School</a>
         </li>
-        <li><a href="https://joshboybirney.github.io/info/About.html">School</a>
+        <li><a href="">School</a>
     </ul>
     
   </div>
@@ -64,12 +64,12 @@ html {
 
 
 .column.side {
-    width: 25%;
+    width: 33%;
 }
 
 
 .column.middle {
-    width: 50%;
+    width: 33.%;
 }
 
 
