--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@ html {
  
   .column {
     float: left;
-    padding: 10px;
+    padding: 30px;
     font-family: monospace;
+    font-size: 30px;
 }
 
 
