--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ html {
 
 
 .column.middle {
-    width: 35%;
+    width: 33.%;
 }
 
 
@@ -88,6 +88,7 @@ html {
 }
   
 #nav {
+    background: url(https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg) no-repeat scroll top center;     background-color: none;
     right: 10px;
     height: 70px;
     background-color: black;
