--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>bla bla</p>
+    <p>bla bla bla bla bla bla blla bla bla bla bla</p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
