--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>bla bla bla bla bla bla blla bla bla bla bla</p>
-  </div>
+    <p>bla bla bla bla bla bla bla </p>
   <div class="column side">
     <h2>Exams</h2>
     <p>this that and the other</p>
