--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>bla bla bla bla bla bla bla </p>
+    <p>bla bla</p>
+  </div>
   <div class="column side">
     <h2>Exams</h2>
     <p>this that and the other</p>
@@ -87,7 +88,7 @@ html {
 }
   
 #nav {
-    background: url(https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg) no-repeat scroll top center;     background-color: none;
+    background: url(https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg) width="50" height="70" no-repeat scroll left center;     background-color: none;
     right: 10px;
     height: 70px;
     background-color: black;
