--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
         </li>
         <li><a href="">School</a>
     </ul>
-    
+   
+     <div class=" main_logo">
+     <a href='#' class="logo_li">
+       <span class='span-logo'>
+          <img src='https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg'/>
+       </span>
+     </a>
+   </div>
+   
   </div>
+  
+   
 
 
   <div class="row">
@@ -40,7 +50,7 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>bla bla bla bla bla bla </p>
+    <p>bla bla</p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
@@ -87,8 +97,13 @@ html {
     }
 }
   
+  div.main_logo{ 
+    padding:0px; 
+    float:left
+}
+  
 #nav {
-    background: url(https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg) width="50" height="70" no-repeat scroll left center;     background-color: none;
+    background: url(https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg) no-repeat scroll top center; background-color: none;
     right: 10px;
     height: 70px;
     background-color: black;
