--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@ html {
     padding:0px; 
     float:left
 }
+  .span-logo {
+   margin-top:-100px;
+   display: inline-block;
+   vertical-align: top;
+   height: 105px;
+   width: 152px;
+   margin-top:0px;
+  }
+  
   
 #nav {
     background: url(https://pbs.twimg.com/profile_images/378800000451802088/1a42bb67a4da70af2da4d2288cf9746e.jpeg) no-repeat scroll top center; background-color: none;
