--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>bla bla bla bla bla bla </p>
+    <p>bla bla bla bla bla      </p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
