--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <div class="column side">
     <h2>Exams</h2>
-    <p>this that and the other</p>
+    <p>There are two parts to the German exam for both Junior and Leaving cert<br>The first part is a Aural exam which is 30 minutes and a Written exam which is 1 hour and 30 minutes<br>The full exam is 2 hours long</p>
   </div>
 </div>
   
