--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>bla bla bla bla bla bl</p>
+    <p>The book used in the first year of the German course is called Viel Spas<br>and the book used in the second year and third year is called Viel Spas 2 </p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
-    <p>There are two parts to the German exam for both Junior and Leaving cert<br>The first part is a Aural exam which is 30 minutes and a Written exam which is 1 hour and 30 minutes<br>The full exam is 2 hours long</p>
+    <p>There are two parts to the German exam for both Junior and Leaving cert<br>The first part is a Aural exam which is 30 minutes long and a Written exam which is 1 hour and 30 minutes<br>The full exam is 2 hours long</p>
   </div>
 </div>
   
@@ -64,7 +64,7 @@ html {
     float: left;
     padding: 20px;
     font-family: monospace;
-    font-size: 25px;
+    font-size: 15px;
 }
 
 
