--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>The book used in the first year of the German course is called Viel Spas<br>and the book used in the second year and third year is called Viel Spas 2 </p>
+    <p>The book used in the first year<br> of the German course is called Viel Spas<br>and the book used in the second year <br>and third year is called Viel Spas 2 </p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
