--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="row">
   <div class="column side">
     <h2>Teachers</h2>
-    <p>The German Teachers in St Josephs Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall</p>
+    <p>The German Teachers in St Josephs <br>Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall</p>
   </div>
   <div class="column middle">
     <h2>The Course</h2>
@@ -65,16 +65,32 @@ html {
     padding: 20px;
     font-family: monospace;
     font-size: 15px;
+    background-color: white;
+    width: 320px;
+    border: 15px solid black;
+   
+    margin: 25px;
+}
 }
 
 
 .column.side {
     width: 33%;
+    background-color: white;
+    width: 320px;
+    border: 15px solid red;
+   
+    margin: 25px;
 }
 
 
 .column.middle {
     width: 33.%;
+    background-color: white;
+    width: 320px;
+    border: 15px solid yellow;
+   
+    margin: 25px;
 }
 
 
