--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="row">
   <div class="column side">
     <h2>Teachers</h2>
-    <p>The German Teachers in St Josephs <br>Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall                                                                                     </p>
+    <p>The German Teachers in St Josephs <br>Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall<br>These Teachers are all very nice and are very well educated                                                                                     </p>
   </div>
   <div class="column middle">
     <h2>The Course</h2>
