--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
   <div class="row">
   <div class="column side">
     <h2>Teachers</h2>
-    <p>The German Teachers in St Josephs <br>Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall<br>These Teachers are all very nice and are very well educated .                                                                                    </p>
+    <p>The German Teachers in St Josephs <br>Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall<br>These Teachers are all very nice and are very well educated .</p>
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>The book used in the first year<br> of the German course is called Viel Spas and the book used in the second year <br>and third year is called Viel Spas 2<br> The book used for leaving cert<br> is called Leaving Cert Oral German .                                                    </p>
+    <p>The book used in the first year of the German course is called Viel Spas and the book used in the second year and third year is called Viel Spas 2 The book used for leaving cert is called Leaving Cert Oral German .</p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
-    <p>There are two parts to the German exam for both Junior and Leaving cert<br>The first part is a Aural exam which is 30 minutes long and a Written exam which is 1 hour and 30 minutes<br>The full exam is 2 hours long<br>The exams arent very hard if studied hard for.</p>
+    <p>There are two parts to the German exam for both Junior and Leaving cert. The first part is a Aural exam which is 30 minutes long and a Written exam which is 1 hour and 30 minutes. The full exam is 2 hours long The exams arent very hard if studied hard for.</p>
   </div>
 </div>
   
