--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="column middle">
     <h2>The Course</h2>
-    <p>The book used in the first year of the German course is called Viel Spaß and the book used in the second year and third year is called Viel Spaß 2 The book used for leaving cert is called Leaving Cert Oral German .</p>
+    <p>The book used in the first year of the German course is called Viel Spaß and the book used in the second year and third year is called Viel Spaß 2 The book used for leaving cert is called Leaving Cert Oral German. You will also need 2 small copies and a A4 hardback.</p>
   </div>
   <div class="column side">
     <h2>Exams</h2>
