--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   
-    <link rel="icon" href="https://cdn3.iconfinder.com/data/icons/essential-pack-2/48/39-Learning-128.png">
+    <link rel="icon" href="https://png.icons8.com/color/1600/germany.png">
     
     <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png" style="width:50%;" width="707" height="190" alt="German Flag">
