--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>
           <a href="https://stjrush.github.io/sitegerman.github.io/">Home</a>
         </li>
-        <li><a href="">School</a>
+        <li><a href="http://www.stjosephsrush.ie/contact/">Contact</a>
         </li>
         <li><a href="">School</a>
         </li>
