--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </li>
         <li><a href="http://www.stjosephsrush.ie/contact/">Contact</a>
         </li>
-        <li><a href="">School</a>
+        <li><a href="http://www.stjosephsrush.ie/information/">Information</a>
         </li>
-        <li><a href="">School</a>
+        <li><a href="https://docs.google.com/presentation/d/16qbtcmEidyz1Cre8CqC3qlRH34JI4VJy2aUOmyAtu20/pub?start=false&loop=false&delayms=3000&slide=id.g36570aac12_0_0">Notice Board</a>
     </ul>
    
   </div>
