--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <div id="nav">
     <ul>
         <li>
-          <a href="https://stjrush.github.io/sitegerman.github.io/">Home</a>
+          <a href="http://www.stjosephsrush.ie">Home</a>
         </li>
         <li><a href="http://www.stjosephsrush.ie/contact/">Contact</a>
         </li>
