--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <div id="nav">
     <ul>
         <li>
-          <a href="http://www.stjosephsrush.ie">Home</a>
+          <a href="https://stjrush.github.io/sitegerman.github.io/">Home</a>
         </li>
         <li><a href="http://www.stjosephsrush.ie/contact/">Contact</a>
         </li>
@@ -95,7 +95,7 @@ html {
 #nav {
    
     right: 10px;
-    height: 70px;
+    height: 50px;
     background-color: black;
     width: 100%;
     text-align: center;
