--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
    
   </div>
   
+  
+<button type="button" onclick="alert('haben Sie einen guten Tag')w">Click Me</button>
+  
   <div class="row">
   <div class="column side">
     <h2>Teachers</h2>
