--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
    
   </div>
   
-  
+ <div class="button"> 
 <button type="button" onclick="alert('haben Sie einen guten Tag')w">Click Me</button>
+  </div>
   
   <div class="row">
   <div class="column side">
