--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
   <div class="column side">
     <h2>Exams</h2>
-    <p>There are two parts to the German exam for both Junior and Leaving cert. The first part is a Aural exam which is 30 minutes long and a Written exam which is 1 hour and 30 minutes. The full exam is 2 hours long The exams arent very hard if studied hard for.</p>
+    <p>There are two parts to the German exam for both Junior and Leaving cert. The first part is a Aural exam which is 30 minutes long and a Written exam which is 1 hour and 30 minutes. The full exam is 2 hours long The exams arent very hard if studied hard for. Within the writen exam,students must write a letter and a short note.</p>
   </div>
 </div>
   
