--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@ html {
     font-size: 15px;
     background-color: white;
     width: 320px;
-    border: 100px solid black;
+    border: 10px solid black;
     margin: 25px;
+    background: yellow;
 }
 }
 
@@ -72,8 +73,9 @@ html {
     width: 33%;
     background-color: white;
     width: 320px;
-    border: 100px solid yellow;
+    border: 10px solid yellow;
     margin: 25px;
+  background: red;
 }
 
 
@@ -81,7 +83,7 @@ html {
     width: 33.%;
     background-color: white;
     width: 320px;
-    border: 100px solid red;
+    border: 10px solid red;
     margin: 25px;
 }
 
