--- a/index.html
+++ b/index.html
@@ -70,21 +70,20 @@ html {
 
 
 .column.side {
-    width: 33%;
-    background-color: white;
+    width: 33%; 
     width: 320px;
     border: 10px solid yellow;
     margin: 25px;
-  background: red;
+    background: red;
 }
 
 
 .column.middle {
     width: 33.%;
-    background-color: white;
     width: 320px;
     border: 10px solid red;
     margin: 25px;
+    background: red
 }
 
 .row:after {
