--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ html {
     margin: 25px;
     background: yellow;
 }
-}
+
 
 
 .column.side {
@@ -81,7 +81,7 @@ html {
 .column.middle {
     width: 33.%;
     width: 320px;
-    border: 10px solid red;
+    border: 10px solid black;
     margin: 25px;
     background: red
 }
