--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   
   <div class="row">
   <div class="column side">
-    <h2>Teachers</h2>
+    <h2 style="color:white;">Teachers</h2>
     <p style="color:white;">The German Teachers in St Josephs <br>Secondary School are as follows;<br>Ms Yvonne Kiely<br>Ms Anita Irwin and<br>Ms Olwyn Hall<br>These Teachers are all very nice and are very well educated .</p>
   </div>
   <div class="column middle">
-    <h2 style="color:white;">The Course</h2>
+    <h2>The Course</h2>
     <p>The book used in the first year of the German course is called Viel Spaß and the book used in the second year and third year is called Viel Spaß 2 The book used for leaving cert is called Leaving Cert Oral German. You will also need 2 small copies and a A4 hardback.</p>
   </div>
   <div class="column side">
