--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 	
 	<style TYPE="text/css">
 		
-.german-flag{
-	border-color: #ffffff;
-	border-style: solid;
-		}
 	  
   img.round {
     border: 2px solid white;
@@ -161,11 +157,11 @@ a.nav-link:active
   <h3>What it's about</h3>
 	<div class="german-flag">
   <br><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png
-  " class="img-responsive img-circle margin" style="display:inline" width="370" height="350" >
+  " class="img-responsive img-circle margin" style="display:inline" width="370" height="370" >
 	</div>
-	<p>
-  Junior Cycle German focuses on improving students’ knowledge on Germany and on learning the language, foods, cities and more will also be learned throughout the course.
-  </p>
+<p>
+  Junior Cycle German emphasys on improving students’ knowledge on Germany and on learning the language, foods, cities and more will also be learned throughout the course.
+</p>
 	
 </div>
 
@@ -294,8 +290,7 @@ activities which may involve some use of the target language;<br>
 	
 	<div class="container-fluid bg-7 text-center">  
 	
-	<br><br><br>
-	
+	<br><br>
 
 	</div>
 	
