--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a.nav-link:active
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="https://toddmilne13.github.io/germanweb/">HOME</a></li>
-        <li><a href="#resource">RESOURCE</a></li>
+        <li><a href="#resource">RESOURCES</a></li>
         <li><a href="#course">COURSE</a></li>
 	      <li><a href="#learning">LEARNING</a></li>
 	      <li><a href="#teacher">TEACHER</a></li>
