--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		
 	
 	<style TYPE="text/css">
-	
 		
 .german-flag{
 	border-color: #ffffff;
@@ -32,8 +31,9 @@
       color: #fcfcfc;
 	  background-color: black;
   }
-	  h3 {font-size: 30px
-	      font-family: monospace;	
+	  h3 {font-size: 38px
+	
+	font-family: monospace;	
 		}
   p {font-size: 20px;
 		font-family: san-serif;
@@ -112,7 +112,7 @@ a.nav-link:visited
 }
 a.nav-link:hover
 {
-   color: #fb3f00;
+   color: #A0A0A0;
    text-decoration: none;
 }
 a.nav-link:active
