--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ a.nav-link:active
    text-decoration: none;
 }
 		
-   a:link, a:visited, a:hover, a:active { color: #ff8080;
+   a:link, a:visited, a:hover, a:active { color: #A0A0A0;
        text-decoration: none; font-size: 22px;
      }
 		
