--- a/index.html
+++ b/index.html
@@ -4,20 +4,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Center the loader */
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
+loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid blue;
+  border-right: 16px solid green;
+  border-bottom: 16px solid red;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+in 2s linear infinite;
   animation: spin 2s linear infinite;
 }
 
