--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-/* Center the loader */
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
+.loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+  border-top: 16px solid blue;
+  border-right: 16px solid green;
+  border-bottom: 16px solid red;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
@@ -30,31 +24,9 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
-/* Add animation to "page content" */
-.animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 1s;
-  animation-name: animatebottom;
-  animation-duration: 1s
-}
-
-@-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
-}
-
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
-}
-
-#myDiv {
-  display: none;
-  text-align: center;
-}
 </style>
+</head>
+<body>
 </head>
 <body onload="myFunction()" style="margin:0;">
 
@@ -338,9 +310,9 @@ activities which may involve some use of the target language;<br>
 	<A NAME="resource"></A>
 	<br>
 	<p>Here are some links to find out more about the syllabus;</p><br>
-    <ul>
-    <li><a href="https://www.education.ie/en/Schools-Colleges/Information/Curriculum-and-Syllabus/Senior-Cycle-/Syllabuses-and-Guidelines/lc_german_sy.pdf">https://www.education.ie/en/Schools-Colleges/Information/Curriculum-and-Syllabus/Senior-Cycle-/Syllabuses-and-Guidelines/lc_german_sy.pdf</a></li>
-    <li><a href="https://www.curriculumonline.ie/getmedia/678b51c6-8c05-49a9-897f-480d826f7f8d/JCSEC11_German_syllabus.pdf">https://www.curriculumonline.ie/getmedia/678b51c6-8c05-49a9-897f-480d826f7f8d/JCSEC11_German_syllabus.pdf</a></li>
+  	<p>click <a href="https://www.education.ie/en/Schools-Colleges/Information/Curriculum-and-Syllabus/Senior-Cycle-/Syllabuses-and-Guidelines/lc_german_sy.pdf">here </a>to look at the german syllabus and <br>click <a href="https://www.curriculumonline.ie/getmedia/678b51c6-8c05-49a9-897f-480d826f7f8d/JCSEC11_German_syllabus.pdf">here </a>to learn more </p>
+   
+    
 	
 	<br>
 	
@@ -362,6 +334,7 @@ activities which may involve some use of the target language;<br>
  <p>Created by:<br>Todd Milne and Jessica Tobin Leonard
 </footer>
 		</div>
+
 <script>
 var myVar;
 
@@ -374,7 +347,6 @@ function showPage() {
   document.getElementById("myDiv").style.display = "block";
 }
 </script>
-
 
 </body>
 </html>
