--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       color: #000000;
   }
   .bg-4 { 
-      background-color: #000000; /* black */
+      background-color: #ff0000; /* black */
       color: #ffffff;
   }
 		
