--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   margin: -75px 0 0 -75px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
+   border-top: 16px solid black;
+ border-right: 16px solid red;
+ border-bottom: 16px solid yellow;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
