--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
       color: #000000;
   }
   .bg-4 { 
-      background-color: #ff0000; /* black */
+      background-color: #ffff00; /* black */
       color: #ffffff;
   }
 		
 		.bg-5 { 
-      background-color: #ff0000; /* red */
+      background-color: #000000; /* red */
       color: #ffffff;
   }
 		
