--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
       color: #000000;
   }
   .bg-4 { 
-      background-color: #ffff00; /* black */
-      color: #ffffff;
+      background-color: #ffff00; /* yellow */
+      color: #000000;
   }
 		
 		.bg-5 { 
-      background-color: #000000; /* red */
+      background-color: #000000; /* black */
       color: #ffffff;
   }
 		
 		.bg-6 { 
-      background-color: #ffff00; /* yellow */
+      background-color: #ff0000; /* red */
       color: #000000;
   }
 		
