--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
   }
 		
 		.bg-7 { 
-      background-color: #000000  ; /* black */
-      color: #ffffff;
+      background-color: #ffff00  ; /* black */
+      color: #000000;
   }
 		
   .container-fluid {     
