--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
 	  position: relative;
     }
   body {
-      font: 20px san-serif, monospace;
+      font: 20px verdana, monospace;
       line-height: 1.8;
       color: #fcfcfc;
 	  background-color: black;
   }
 	  h3 {font-size: 38px
-	
-	font-family: monospace;	
 		}
+		
   p {font-size: 20px;
-		font-family: san-serif;
+		font-family: verdana;
 		
 		}
 	  
